--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+allowed.origins=http://localhost:4200
+
+#okta.oauth2.issuer=https://dev-uykzi6asbd5gf0c2.us.auth0.com/
+#okta.oauth2.client-id=fQJKORP17MCmL1iK5S3fykli0CvylGS9
+#okta.oauth2.audience=http://localhost:8080
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-uykzi6asbd5gf0c2.us.auth0.com/
+spring.security.oauth2.resourceserver.jwt.audience=http://localhost:8080
