--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,4 +21,6 @@ allowed.origins=http://localhost:4200
 #okta.oauth2.audience=http://localhost:8080
 
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-uykzi6asbd5gf0c2.us.auth0.com/
-spring.security.oauth2.resourceserver.jwt.audience=http://localhost:8080
+spring.security.oauth2.resourceserver.jwt.audience=http://localhost:9090
+
+server.port=9090
